# zephyr-projects

./: .gitignore  README.md
epd_tutorials/: README.md
epd_tutorials/EEZ_Studio_Demo/: CMakeLists.txt  prj.conf
epd_tutorials/EEZ_Studio_Demo/boards/: nrf52840dk_nrf52840.overlay
epd_tutorials/EEZ_Studio_Demo/src/: main.c
epd_tutorials/EEZ_Studio_Demo/src/ui/: screens.c  screens.h
epd_tutorials/docs/: 01-display-setup.md  02-EEZ-Studio.md
epd_tutorials/epd_hello_world/: CMakeLists.txt  prj.conf
epd_tutorials/epd_hello_world/boards/: nrf52840dk_nrf52840.overlay
epd_tutorials/epd_hello_world/src/: main.c
epd_tutorials/ssd1680_display/: CMakeLists.txt  prj.conf
epd_tutorials/ssd1680_display/boards/: nrf52840dk_nrf52840.overlay
epd_tutorials/ssd1680_display/src/: Battery_Resized.c  main.c
examples/button_driver_example/: CMakeLists.txt  README.md  prj.conf  sample.yaml
examples/button_driver_example/boards/: nrf52840dk_nrf52840.overlay
examples/button_driver_example/modules/button/drivers/button/: button.c
examples/button_driver_example/modules/button/dts/bindings/input/: custom,button.yaml
examples/button_driver_example/modules/mcp9808/: CMakeLists.txt:Zone.Identifier
examples/button_driver_example/src/: main.c
examples/button_driver_example_step_by_step/: README.md  README.md:Zone.Identifier
